--- a/app/webroot/css/single.css
+++ b/app/webroot/css/single.css
@@ -14,3 +14,4 @@
 .single_header .single_by span{color:#ca125c}
 .left_panel .single_image{height:373px;width:605px;overflow:hidden;margin-top:10px;}
 .right_panel .feed_header {font-size:28px;font-family:'novecento_sans_widemedium';padding-top:5px;border-top:3px #012644 solid;color:#012644}
+.left_panel .single_content{margin-top:10px;font-family:"Segoe UI"; color:#222222; font-size:14px;}
