--- a/app/webroot/css/view.css
+++ b/app/webroot/css/view.css
@@ -13,4 +13,5 @@
 .single_header .single_by{margin-left:10px;overflow:hidden;float:left;font-size:13px;color:#4b5659;text-transform:uppercase}
 .single_header .single_by span{color:#ca125c}
 .single_image{height:231px;width:605px;overflow:hidden;margin-top:10px;}
+.single_desc{font-family:'Segoe UI';color:#333333;margin-top:10px; }
 
